// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ForgotPasswordForm > should dispaly error when email is not correct 1`] = `
<DocumentFragment>
  <div
    class="absolute z-0 rounded-full w-96 h-96 blur-3xl mix-blend-multiply opacity-50 animate-auth-blob bg-primary left-[10%] bottom-[15%]"
  />
  <div
    class="absolute z-0 rounded-full w-96 h-96 blur-3xl mix-blend-multiply opacity-50 animate-auth-blob bg-bg-warning right-[25%] top-[10%]"
    style="animation-delay: 2s;"
  />
  <div
    class="absolute z-0 rounded-full w-96 h-96 blur-3xl mix-blend-multiply opacity-50 animate-auth-blob bg-bg-error bottom-[10%] right-[17%]"
    style="animation-delay: 4s;"
  />
  <div
    class="w-full sm:max-w-md p-6 bg-white sm:rounded-lg md:shadow min-w-[420px] z-10 relative"
  >
    <div
      class="flex flex-col gap-2 mb-6"
    >
      <h1
        class="text-2xl font-bold leading-tight tracking-tight text-text-primary"
      >
        Forgot Password
      </h1>
      <p
        class="text-sm font-light"
      >
        If you forgot your password we will send you an email with link to reset it
      </p>
    </div>
    <form
      class="flex flex-col gap-6"
    >
      <div
        class="relative"
      >
        <div
          class="flex items-center gap-3"
        >
          <label
            class="font-normal text-text-secondary text-[0.875rem] absolute top-[-11px] left-2 bg-white"
            data-testid="input-label"
            for="email"
          >
            Email
          </label>
          <input
            autocomplete="off"
            class="w-full px-3.5 py-[7px] outline-none border rounded text-text-secondary transition-all disabled:text-text-menu disabled:cursor-not-allowed focus:ring-transparent placeholder:text-text-menu placeholder:font-normal font-medium text-[0.875rem] border-bg-error hover:border-bg-error caret-bg-error shadow-text-field-error focus:border-bg-error active:shadow-none focus:shadow-text-field-error"
            data-testid="input"
            id="email"
            name="email"
            placeholder="Email"
            spellcheck="false"
            type="text"
            value="testexample.com"
          />
          <svg
            class="grid place-items-center"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM7.99463 12.546C7.58063 12.546 7.24463 12.21 7.24463 11.796V7.37598C7.24463 6.96198 7.58063 6.62598 7.99463 6.62598C8.40863 6.62598 8.74463 6.96198 8.74463 7.37598V11.796C8.74463 12.21 8.40863 12.546 7.99463 12.546ZM7.25 4.2041C7.25 4.6181 7.581 4.9541 7.995 4.9541H8.005C8.419 4.9541 8.755 4.6181 8.755 4.2041C8.755 3.7901 8.419 3.4541 8.005 3.4541C7.591 3.4541 7.25 3.7901 7.25 4.2041Z"
              fill="#F95C78"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <span
          class="text-[0.75rem] font-normal text-bg-error"
          data-testid="input-error-message"
        >
          Must be a valid email
        </span>
      </div>
      <button
        class="inline-flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-all appearance-none select-none bg-primary text-white disabled:shadow-[inset_0_0_0_1px_hsl(var(--colors-border-primary))] disabled:bg-white disabled:hover:bg-white disabled:text-text-menu px-3 text-[0.875rem] leading-[1.5rem] rounded-md hover:shadow-[inset_0_0_0_3px_#94b0ff] py-2"
        type="submit"
      >
        Send Link
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ForgotPasswordForm > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="absolute z-0 rounded-full w-96 h-96 blur-3xl mix-blend-multiply opacity-50 animate-auth-blob bg-primary left-[10%] bottom-[15%]"
  />
  <div
    class="absolute z-0 rounded-full w-96 h-96 blur-3xl mix-blend-multiply opacity-50 animate-auth-blob bg-bg-warning right-[25%] top-[10%]"
    style="animation-delay: 2s;"
  />
  <div
    class="absolute z-0 rounded-full w-96 h-96 blur-3xl mix-blend-multiply opacity-50 animate-auth-blob bg-bg-error bottom-[10%] right-[17%]"
    style="animation-delay: 4s;"
  />
  <div
    class="w-full sm:max-w-md p-6 bg-white sm:rounded-lg md:shadow min-w-[420px] z-10 relative"
  >
    <div
      class="flex flex-col gap-2 mb-6"
    >
      <h1
        class="text-2xl font-bold leading-tight tracking-tight text-text-primary"
      >
        Forgot Password
      </h1>
      <p
        class="text-sm font-light"
      >
        If you forgot your password we will send you an email with link to reset it
      </p>
    </div>
    <form
      class="flex flex-col gap-6"
    >
      <div
        class="relative"
      >
        <div
          class="flex items-center gap-3"
        >
          <label
            class="font-normal text-text-secondary text-[0.875rem] absolute top-[-11px] left-2 bg-white"
            data-testid="input-label"
            for="email"
          >
            Email
          </label>
          <input
            autocomplete="off"
            class="w-full px-3.5 py-[7px] outline-none border border-border-primary rounded text-text-secondary transition-all hover:border-primary disabled:text-text-menu disabled:cursor-not-allowed focus:border-primary focus:shadow-text-field active:shadow-none focus:ring-transparent placeholder:text-text-menu placeholder:font-normal font-medium text-[0.875rem]"
            data-testid="input"
            id="email"
            name="email"
            placeholder="Email"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        class="inline-flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-all appearance-none select-none bg-primary text-white disabled:shadow-[inset_0_0_0_1px_hsl(var(--colors-border-primary))] disabled:bg-white disabled:hover:bg-white disabled:text-text-menu px-3 text-[0.875rem] leading-[1.5rem] rounded-md hover:shadow-[inset_0_0_0_3px_#94b0ff] py-2"
        type="submit"
      >
        Send Link
      </button>
    </form>
  </div>
</DocumentFragment>
`;
